package abstracts;

public interface Closable {
    void close();
}
