package com.company;

public class Decision {
    private String decision;

    public Decision(String decision) {
        this.decision = decision;
    }

    public String getDecision() {
        return decision;
    }
}
