package abstracts

import types.Color

interface Paintable {
    fun paint(color: Color)
}