package com.company

class Quality(val description: String)