package com.company

open class Sound(var name: String) {
    fun sound() {
        println("Звучит $name")
    }
}